k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devsecops-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devsecops
  template:
    metadata:
      labels:
        app: devsecops

    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 101
        runAsGroup: 101
        fsGroup: 101
        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: nginx
          image: rouhou/devsecops-app:dev
          ports:
            - containerPort: 80

          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false

          volumeMounts:
            - name: nginx-cache
              mountPath: /var/cache/nginx

            - name: nginx-run
              mountPath: /run

      volumes:
        - name: nginx-cache
          emptyDir: {}

        - name: nginx-run
          emptyDir: {}
