k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devsecops-service
spec:
  type: NodePort
  selector:
    app: devsecops
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
